[package]
name = "css-image"
version = "0.1.1"
edition = "2021"
description = "Library for rendering images from css"
license = "MIT"
repository = "https://github.com/unixpariah/css-image"
readme = "README.md"
keywords = ["css", "image", "rendering"]
categories = ["graphics"]
authors = ["unixpariah"]

[dependencies]
cairo-rs = { version = "0.19.2", features = ["png"] }
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
